--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   http: ^0.12.2
+  retrofit:
+  json_annotation:
+  logger:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator:
+  build_runner:
+  json_serializable:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
