--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  # dio:
   http: ^0.12.2
-  retrofit:
   json_annotation:
   logger:
+  retrofit:
 
 dev_dependencies:
   flutter_test:
